--- a/frontend/src/stylesheet/css/styles.css
+++ b/frontend/src/stylesheet/css/styles.css
@@ -7,52 +7,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-body {
-  margin: 0;
-  padding: 0;
+#root {
+  background: purple;
   width: 100%;
-  background: #fff;
-  font-family: "Rubik", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-}
-
-h1, h2 {
-  color: #4d4d4d;
-  line-height: 1.2;
-}
-@media (min-width: 576px) {
-  h1, h2 {
-    line-height: 1.4;
-  }
-}
-
-h1 {
-  font-size: 25px;
-  font-weight: 700;
-}
-@media (min-width: 576px) {
-  h1 {
-    font-size: 35px;
-  }
-}
-
-h2 {
-  font-size: 1.125rem;
-  font-size: 20px;
-}
-@media (min-width: 576px) {
-  h2 {
-    font-size: 30px;
-  }
-}
-
-p {
-  font-size: 16px;
-  line-height: 1.5;
+  min-height: 100vh;
 }
 
 a, a:visited, a:active {
@@ -69,10 +27,6 @@ img,
 picture {
   max-width: 100%;
   display: block;
-}
-
-a {
-  text-decoration: none;
 }
 
 button {
@@ -97,11 +51,6 @@ ol, ul {
 
 a {
   text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
 
 .form {
@@ -181,19 +130,73 @@ img {
 .btn--primary.btn--primary {
   color: #fff;
 }
-.btn--base {
+.btn--secondary {
   background-color: rgba(255, 255, 255, 0);
   color: #262626;
   border: solid 1px #262626;
 }
-.btn--base:hover {
+.btn--secondary:hover {
   background-color: #955BA5;
   color: #fff;
   border: solid 1px rgba(255, 255, 255, 0);
 }
 
 .nav {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: gray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+}
+.nav .branding {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+  width: 100%;
+  max-width: 200px;
+}
+.nav .branding__logo {
+  width: 32px;
+  height: 32px;
+}
+.nav .branding__name {
+  color: blue;
+}
+.nav .navitems {
+  display: flex;
+  align-items: center;
+  column-gap: 16px;
+}
+.nav .navitems__link {
+  padding: 0 10px;
+  background: orange;
+}
+.nav .cta {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 200px;
+  border: solid 1px green;
+}
+
+.layout {
+  background: green;
+  min-height: 100vh;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+.layout__main {
+  flex: 1;
+  width: 100%;
   background-color: orange;
+  display: flex;
+  padding: 40px 16px;
 }
 
 /*# sourceMappingURL=styles.css.map */
