--- a/frontend/src/stylesheet/scss/base/_base.scss
+++ b/frontend/src/stylesheet/scss/base/_base.scss
@@ -2,61 +2,30 @@
 @use '../abstracts/breakpoints' as *;
 
 
-
-body {
-    margin: 0;
-    padding: 0;
-
+#root {
+    background: purple;
     width: 100%;
-    // min-height: 100vh;
-
-    background: $light;
-    // color: $dark;
-    font-family: $rubik;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-
-
+    min-height: 100vh;
 }
 
+// body {
+//     margin: 0;
+//     padding: 0;
+
+//     width: 100%;
+//     min-height: 100vh;
+
+//     background: yellow;
+//     // color: $dark;
+//     font-family: $rubik;
+//     font-size: 16px;
+//     font-weight: 400;
+//     line-height: 1.5;
+//     overflow-x: hidden;
+//     scroll-behavior: smooth;
 
 
-h1, h2 {
-    color: $gray;
-    line-height: 1.2;
-    @include sm(){
-        
-        line-height: 1.4;
-    }
-}
-
-h1 {
-    font-size: 25px;
-    font-weight: 700;
-    
-    @include sm(){
-        font-size: 35px;
-    }
-}
-
-h2 {
-    font-size: $font-md;
-    font-size: 20px;
-
-    @include sm(){
-        font-size: 30px;
-    }
-}
-
-
-
-p {
-    font-size: 16px;
-    line-height: 1.5;
-}
+// }
 
 a, a:visited, a:active {
     text-decoration: none;
@@ -74,17 +43,8 @@ picture {
   display: block;
 }
 
-a {
-    text-decoration: none;
-}
-
 button {
     outline: none;
     border: none;
 }
 
-input {
-    // border: none;
-    // border: solid 1px $primary;
-    // outline: none;
-}
