--- a/frontend/src/stylesheet/scss/common/_buttons.scss
+++ b/frontend/src/stylesheet/scss/common/_buttons.scss
@@ -34,7 +34,7 @@
         
     }
 
-    &--base {
+    &--secondary {
         background-color: $transparent;
         color: $dark;
         border: solid 1px $dark;
