--- a/frontend/src/stylesheet/scss/pages/_habits.scss
+++ b/frontend/src/stylesheet/scss/pages/_habits.scss
@@ -1,2 +1,38 @@
 @use '../abstracts/variables' as *;
 @use '../abstracts/breakpoints' as *;
+
+.habits {
+    width: 100%;
+    // max-width: 50%;
+    margin: 0 auto;
+
+    @include breakpoint('md'){
+        max-width: 50%;
+    }
+
+    // display: flex;
+    // flex-direction: column;
+    // row-gap: 40px;
+
+
+    &__title {
+        width: 100%; 
+        text-align: center; 
+        border-bottom: 2px solid #000; 
+        line-height: 0.1em;
+        margin: 10px 0 20px; 
+
+        font-size: 40px;
+        font-style: italic;
+        font-family: fantasy;
+        font-weight: 600;
+
+        margin-bottom: 45px;
+
+        span {
+            background:#fff; 
+            padding:0 20px; 
+        }
+    }
+}
+
