--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,11 +66,18 @@
   html {
     margin: 0;
     padding: 0;
+    height: 100vh;
   }
 
   body {
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
     @apply leading-normal;
+  }
+
+  #root {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
   }
 }
 
